Fix attempt for weird bug on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -48,3 +48,7 @@ body::-webkit-scrollbar-button {
 .modal-box {
   max-height: 75vh;
 }
+
+legend.fieldset-legend {
+  text-align: left;
+}
